src/test/deca/context/valid/oracle/public_method.deca
class A {
    void method(){
        print("ok");
    }
    int method2(){
        return 1;
    }
}

{
    A a = new A();
    a.method();
    print(a.method2());
}