src/test/deca/context/invalid/with-object/instanceof_op_wrong_right.deca
class A{}

{
    A a = new A();
    a instanceof int;
}